# 202511_droneforge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  droneforge-web.wasm  index.html  map_ui.js  run.ps1  start_menu.js
.github/workflows/: deploy-pages.yml
benchmark/: package.json  run.js
benchmark/results/: load-benchmark.json  load-benchmark.md
d-gen-tileset/: Cargo.toml
d-gen-tileset/src/: generator.rs  layout.rs  lib.rs  main.rs  sprite_atlas.rs
design/: gaps_web.md  look_and_layout_web.md  scripting_web.md  ui_flow_web.md  vision_web.md
docs/: droneforge-web.wasm  index.html
droneforge-core/: Cargo.toml
droneforge-core/src/: block.rs  chunk.rs  chunk_cache.rs  coordinates.rs  drone.rs  inventory.rs  lib.rs  linecast.rs  storage.rs  tool.rs  world.rs  worldgen.rs
droneforge-web/: Cargo.toml
droneforge-web/src/: core_draw.rs  drone.rs  lib.rs  main.rs
web/: droneforge-web.wasm  index.html  main.js  map_ui.js  start_menu.js  style.css
