[package]
name = "droneforge-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "droneforge_web_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "droneforge-web"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
droneforge-core = { path = "../droneforge-core" }
getrandom = { version = "0.3", features = ["wasm_js"] }
